# idirt

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
abermud/: .Dockerfile.swp  Dockerfile  test.sh
data/: actions  banned_chars  bootstrap  credits  frobcht  generate.conf  goodbye  illegal  issue  levels  locations  mobiles  motd  objects  pflags  sigmsg1  sigmsg2  syslog  title  uaf_rand  verbs  verbs.src  wiz.txt  wizlist  zones  zones_1
data/HELP/: Mail.Help  help  help.advisor  help.avatar  help.awiz  help.mortal  help.prophet  help.upper  help.wizard
data/INFO/: additions.i  blink.i  general.i  info  lang.i  mana.i  mudlist.i  quests.i  tournament.i  zformat.i  zones.i
data/POLICY/: ads.p  cheat.p  clone.p  cut.p  frob.p  harass.p  healing.p  lagdeath.p  policy
data/ZONES/: Zonelist  ancient.zone  blizzard.zone  camelot.zone  castle.zone  catacomb.zone  cave.zone  church.zone  eforest.zone  fantasy.zone  forest.zone  frobozz.zone  hick.zone  home.zone  icecave.zone  island.zone  labyrinth.zone  ledge.zone  mithdan.zone  moapt.zone  (+19 more)
doc/: ChangeLog  LICENSE
include/: LINKCOUNT.H  MACHINE.H  VERSION.H  acct.h  actions.h  bootstrap.h  bprintf.h  cflags.h  change.h  climate.h  clone.h  comm.h  commands.h  condact.h  config.h  eflagnames.h  eflags.h  exit.h  exitnames.h  exits.h  extern.h  fight.h  files.h  flags.h  fluid.h  frob.h  global.h  god.h  iflagnames.h  iflags.h  jmp.h  kernel.h  levelnames.h  levels.h  lflagnames.h  lflags.h  locations.h  log.h  logcolors.h  logconfig.h  (+44 more)
src/: Makefile  Makefile.old  VERSION.H  acct.c  actions.c  bootstrap.c  bootstrap.h  bprintf.c  bprintf.h  change.c  climate.c  clone.c  clone.h  comm.c  commands.c  commands.h  crypt.c  crypt.h  exit.c  exits.h  extern.h  fight.c  fight.h  flags.c  frob.c  frob.h  generate.c  global.h  god.c  ident.h  iflagnames.h  iflags.h  jmp.h  kernel.h  levelnames.h  lflagnames.h  locations.h  log.c  log.h  logcolors.h  (+46 more)
utils/: Makefile  Makefile.old  backup  conv  fixlog  makedep  stats
(+13 files in other folders)
